詳細は内田インタラクティブに記載

--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -13,7 +13,8 @@
  blohm_und_voss_ITA:0 "ブローム・ウント・フォス イタリア支社"
  TUR_black_sea_shipyard:0 "トルコ黒海造船所"
  ARMOUR_TITLE_ENGINE:0 "駆動系"
- ARMOUR_TITLE_ARMAMENTS:0 "補助装備と装甲"
+ ARMOUR_TITLE_ARMOR:0 "装甲"
+ ARMOUR_TITLE_MODULES:0 "特殊モジュール"
  IB_TAC_BOMBER_TEXT:0 "戦術爆撃機・艦上攻撃機"
  IB_SCOUT_PLANE_TEXT:0 "艦上偵察機"
  IB_tank_design_bonus:0 "戦車設計局"
@@ -44,14 +45,22 @@
  cannon_tech_3:0 "口径漸減装置"
  cannon_tech_3_desc:0 "砲口に装着する特殊アダプターは、砲口径を圧縮させ、砲弾を減口径させるものである。これにより、砲口初速が格段に上がり、貫徹力が向上する。但し、希少な素材を使った特殊な弾薬が必要となる。"
  tankradio:0 "戦車搭載用無線機"
- tankradio_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を可能にする"
+ tankradio_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
+ tankradio_2:0 "指揮車用無線機"
+ tankradio_2_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
+ equipment_for_engineers:0 "応急修理装備"
+ equipment_for_engineers_desc:0 "工兵部隊が使用する工事用の道具に加え、戦車整備員が使用する機械類を搭載することで、現地での突発的故障や多少の被弾などに対し緊急的な修理を行うだけでなく、撃破して放棄された敵車両から装備を流用するといった工夫が可能になる。"
  basic_heavy_tank_chassis_short:0 "1938年型重戦車"
  basic_medium_tank_chassis_short:0 "1936年型中戦車"
+ tank_medium_cannon_3:0 "発展型中口径砲"
+ tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭中戦車クラスの主武装とされる予定である。"
 
 
  #tank_modules_replace
  tank_radio_1:0 "戦車搭載用無線機"
- tank_radio_1_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を可能にする"
+ tank_radio_1_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
+ tank_radio_3:0 "指揮車用無線機"
+ tank_radio_3_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
 
  ###航空機企業###
  CAS_manufacturer:0 "対地攻撃重視の設計社"
