--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -54,12 +54,12 @@
  basic_medium_tank_chassis_short:0 "1936年型中戦車"
  tank_medium_cannon_3:0 "発展型中口径砲"
  tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭中戦車クラスの主武装とされる予定である。"
- EQ_MOD_CAT_tank_machinegun_module_TITLE:0 "固定式機銃"
- IB_tank_heavy_machine_gun_1:0 "同軸機関銃"
- IB_tank_heavy_machine_gun_1_desc:0 "小型戦車の基本的な武装として砲塔に固定し、主に対人戦での運用を想定した兵器だが、その効力は限定的である。"
- IB_tank_heavy_machine_gun_2:0 "同軸改良型機関銃"
+ EQ_MOD_CAT_tank_machinegun_module_TITLE:0 "砲塔上部銃砲"
+ IB_tank_heavy_machine_gun_1:0 "車長用機関銃"
+ IB_tank_heavy_machine_gun_1_desc:0 "小型戦車の基本的な武装として砲塔上部に搭載し、主に対人戦での運用を想定した兵器だが、その効力は限定的である。"
+ IB_tank_heavy_machine_gun_2:0 "車長用改良型機関銃"
  IB_tank_heavy_machine_gun_2_desc:0 "小型機関砲などと併用し、対戦車戦闘をこなしつつ敵随伴歩兵に対してもある程度の火力発揮が期待できる兵装。"
- IB_tank_heavy_machine_gun_3:0 "同軸発展型機関銃"
+ IB_tank_heavy_machine_gun_3:0 "車長用発展型機関銃"
  IB_tank_heavy_machine_gun_3_desc:0 "改良された陣地設置用の重機関銃を戦車用に再設計したこの兵装は、内部に爆薬を仕込むことにより対歩兵戦闘だけでなく、機械化された目標に対してもある程度の効力を発揮する事ができる。"
 
 
@@ -68,8 +68,8 @@
  tank_radio_1_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
  tank_radio_3:0 "指揮車用無線機"
  tank_radio_3_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
- additional_machine_guns:0 "可動式機関銃"
- additional_machine_guns_desc:0 "戦車砲塔外部に通常の歩兵部隊が使用する機関銃を搭載する事により、周囲への掃射や簡易的な対歩兵戦闘への力を得る事が出来る。"
+ additional_machine_guns:0 "固定式機関銃"
+ additional_machine_guns_desc:0 "戦車砲塔、もしくは車体前面に通常の歩兵部隊が使用する機関銃を搭載する事により、周囲への掃射や簡易的な対歩兵戦闘への力を得る事が出来る。"
 
  ###航空機企業###
  CAS_manufacturer:0 "対地攻撃重視の設計社"
