--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -79,21 +79,21 @@
  tank_heavy_cannon_2:0 "改良型大口径砲"
  tank_heavy_cannon_3:1 "発展型大口径砲"
  tank_super_heavy_cannon:0 "超大口径砲"
- EQ_MOD_CAT_tank_light_turret_type_C1_TITLE:0 "中口径砲用固定砲塔"
- tank_light_fixed_superstructure_turret_1:0 "中口径砲用固定砲塔"
- tank_light_fixed_superstructure_turret_1_desc:0 "中口径砲用固定砲塔"
+ EQ_MOD_CAT_tank_light_turret_type_C1_TITLE:0 "中型砲用固定砲塔"
+ tank_light_fixed_superstructure_turret_1:0 "中型砲用固定砲塔"
+ tank_light_fixed_superstructure_turret_1_desc:0 "中型砲用固定砲塔"
  
- EQ_MOD_CAT_tank_medium_turret_type_C1_TITLE:0 "大口径砲用固定砲塔"
- tank_medium_fixed_superstructure_turret_1:0 "大口径砲用固定砲塔"
- tank_medium_fixed_superstructure_turret_1_desc:0 "大口径砲用固定砲塔"
+ EQ_MOD_CAT_tank_medium_turret_type_C1_TITLE:0 "大型砲用固定砲塔"
+ tank_medium_fixed_superstructure_turret_1:0 "大型砲用固定砲塔"
+ tank_medium_fixed_superstructure_turret_1_desc:0 "大型砲用固定砲塔"
  
- EQ_MOD_CAT_tank_medium_turret_type_C2_TITLE:0 "超大口径砲用固定砲塔"
- tank_medium_fixed_superstructure_turret_2:0 "超大口径砲用固定砲塔"
- tank_medium_fixed_superstructure_turret_2_desc:0 "超大口径砲用固定砲塔"
+ EQ_MOD_CAT_tank_medium_turret_type_C2_TITLE:0 "超大型砲用固定砲塔"
+ tank_medium_fixed_superstructure_turret_2:0 "超大型砲用固定砲塔"
+ tank_medium_fixed_superstructure_turret_2_desc:0 "超大型砲用固定砲塔"
  
- EQ_MOD_CAT_tank_heavy_turret_type_C1_TITLE:0 "超大口径砲用固定砲塔"
- tank_heavy_fixed_superstructure_turret_1:0 "超大口径砲用固定砲塔"
- tank_heavy_fixed_superstructure_turret_1_desc:0 "超大口径砲用固定砲塔"
+ EQ_MOD_CAT_tank_heavy_turret_type_C1_TITLE:0 "超大型砲用固定砲塔"
+ tank_heavy_fixed_superstructure_turret_1:0 "超大型砲用固定砲塔"
+ tank_heavy_fixed_superstructure_turret_1_desc:0 "超大型砲用固定砲塔"
 
 ###追加火砲技術###
  artillery5:0 "発展型野戦砲改良 I"
