翻訳を修正

--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -5,7 +5,6 @@
  #deep_operations:0 "タンク・デサント"
  deep_operations_desc:0 "縦深作戦、 または縦深戦闘の概念は、 複数の地点で敵の防衛線を突破し、 敵の使用可能な予備兵や縦深を破壊し、 可能な限り多くの戦略的縦深を占領するものである。 "
  technology_sharing_idea:0 "技術の共有"
- modern_blitzkrieg:0 "パンツァーカイル"
  ib_hit_chance:0 "正確無比"
  ib_hit_chance_desc:0 "この提督の艦隊は砲精度に於いて他に引けを取らない"
  night_vision3:0 "暗視装置Ⅲ"
@@ -256,7 +255,7 @@
  Syria:0 "シリア"
  Israel:0 "イスラエル"
  Gilan:0 "ギーラーン"
- Deccan Plateau:0 "デカン高原"
+ Deccan_Plateau:0 "デカン高原"
  Nigeria:0 "ナイジェリア"
  Sudan:0 "スーダン"
  Kenya:0 "ケニア"
@@ -293,7 +292,7 @@
  Irkutsk:0 "イルクーツク"
  Yakutsk:0 "ヤクーツク"
  Yunnan:0 "雲南"
- Deccan Plateau:0 "デカン高原"
+ Deccan_Plateau:0 "デカン高原"
  Kwajalein Atoll:0 "クウェゼリン環礁"
  Western Japan:0 "日本西部"
  Central Japan:0 "日本中央部"
