--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -31,44 +31,64 @@
  suspension_tech_3_desc:0 "転輪を挟み込むことで車台と同じ全長内に、より多くの転輪を収めることが可能で、機動性を向上させると同時に、側面の防御力を高めることが可能となる。"
  suspension_tech_4:0 "クリスティー式サスペンション"
  suspension_tech_4_desc:0 "アメリカの発明家によって開発されたこのサスペンションは、非常に高い速度を実現する。"
- tankammo_tech_1:0 "発煙弾発射装置"
- tankammo_tech_1_desc:0 "戦車内から発射可能な発煙弾発射装置で、厚い煙を発生させて戦車を隠蔽が可能となる。防御時や待ち伏せ攻撃を受けた後などに非常に有効である。"
- tankammo_tech_2:0 "湿式弾薬庫"
- tankammo_tech_2_desc:0 "弾薬ラックに追加されたウォータージャケットは、戦車の被弾時に弾薬が誘爆する危険性を劇的に減少させ、搭乗員からも大変好評となっている。"
- tankammo_tech_3:0 "追加の弾薬庫"
- tankammo_tech_3_desc:0 "弾薬収納ラックを追加することで、無補給でより長く戦闘継続が可能となる。しかし装甲が貫通した場合、その結果は壊滅的なものとなる可能性が高い。これは特に攻撃時に問題となる。"
+
+ tankammo_tech_1:0 "湿式弾薬庫"
+ tankammo_tech_1_desc:0 "弾薬ラックに追加されたウォータージャケットは、戦車の被弾時に弾薬が誘爆する危険性を劇的に減少させ、搭乗員からも大変好評となっている。"
+ tankammo_tech_2:0 "追加弾薬庫"
+ tankammo_tech_2_desc:0 "弾薬収納ラックを追加することで、無補給でより長く戦闘継続が可能となる。しかし装甲が貫通した場合、その結果は壊滅的なものとなる可能性が高い。これは特に攻撃時に問題となる。"
+
  cannon_tech_1:0 "口径漸減装置"
  cannon_tech_1_desc:0 "砲口に装着する特殊アダプターは、砲口径を圧縮させ、砲弾を減口径させるものである。これにより、砲口初速が格段に上がり、貫徹力が向上する。但し、希少な素材を使った特殊な弾薬が必要となる。"
  cannon_tech_2:0 "砲安定装置"
  cannon_tech_2_desc:0 "戦車の移動時に、主砲を同目標へ指向するための機械装置。移動中に正確射撃が可能なほど高度なものではないが、短時間の停車中に砲手が目標を再照準することなく正確な射撃が可能となる。"
  cannon_tech_3:0 "自動装填装置"
  cannon_tech_3_desc:0 "砲弾の装填や、戦車が長時間に亘って高い発射速度の維持を可能にするための自動化機構。"
- tankradio:0 "戦車搭載用無線機"
- tankradio_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
- tankradio_2:0 "指揮車用無線機"
- tankradio_2_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
+
+ tankother:0 "簡単な整備"
+ tankother_desc:0 "車体の各所にあるハッチからは各種部品に接近が可能で、複雑な整備も簡単に実施が可能である。"
+ tankother_2:0 "応急修理装備"
+ tankother_2_desc:0 "工兵部隊が使用する工事用の道具に加え、戦車整備員が使用する機械類を搭載することで、現地での突発的故障や多少の被弾などに対し緊急的な修理を行うだけでなく、撃破して放棄された敵車両から装備を流用するといった工夫が可能になる。"
+ tankother_3:0 "発煙弾発射装置"
+ tankother_3_desc:0 "戦車内から発射可能な発煙弾発射装置で、厚い煙を発生させて戦車を隠蔽が可能となる。防御時や待ち伏せ攻撃を受けた後などに非常に有効である。"
+
  equipment_for_engineers:0 "応急修理装備"
  equipment_for_engineers_desc:0 "工兵部隊が使用する工事用の道具に加え、戦車整備員が使用する機械類を搭載することで、現地での突発的故障や多少の被弾などに対し緊急的な修理を行うだけでなく、撃破して放棄された敵車両から装備を流用するといった工夫が可能になる。"
+
  basic_heavy_tank_chassis_short:0 "1938年型重戦車"
  basic_medium_tank_chassis_short:0 "1936年型中戦車"
  tank_medium_cannon_3:0 "発展型中口径砲"
  tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭中戦車クラスの主武装とされる予定である。"
  EQ_MOD_CAT_tank_machinegun_module_TITLE:0 "砲塔上部銃砲"
- IB_tank_heavy_machine_gun_1:0 "車長用機関銃"
- IB_tank_heavy_machine_gun_1_desc:0 "小型戦車の基本的な武装として砲塔上部に搭載し、主に対人戦での運用を想定した兵器だが、その効力は限定的である。"
+ IB_tank_heavy_machine_gun:0 "車長用機関銃"
+ IB_tank_heavy_machine_gun_desc:0 "小型戦車の基本的な武装として砲塔上部に搭載し、主に対人戦での運用を想定した兵器だが、その効力は限定的である。"
  IB_tank_heavy_machine_gun_2:0 "車長用改良型機関銃"
  IB_tank_heavy_machine_gun_2_desc:0 "小型機関砲などと併用し、対戦車戦闘をこなしつつ敵随伴歩兵に対してもある程度の火力発揮が期待できる兵装。"
  IB_tank_heavy_machine_gun_3:0 "車長用発展型機関銃"
  IB_tank_heavy_machine_gun_3_desc:0 "改良された陣地設置用の重機関銃を戦車用に再設計したこの兵装は、内部に爆薬を仕込むことにより対歩兵戦闘だけでなく、機械化された目標に対してもある程度の効力を発揮する事ができる。"
 
+ EQ_MOD_CAT_tank_special_armor_module_TITLE:0 "装甲防護"
+ EQ_MOD_CAT_tank_special_turret_module_TITLE:0 "主砲機構"
+ EQ_MOD_CAT_tank_special_ammo_module_TITLE:0 "車載弾薬庫"
+ EQ_MOD_CAT_tank_coaxial_module_TITLE:0 "砲塔固定銃砲"
+ EQ_MOD_CAT_tank_commander_module_TITLE:0 "砲塔上部銃砲"
+
 
  #tank_modules_replace
- tank_radio_1:0 "戦車搭載用無線機"
- tank_radio_1_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
- tank_radio_3:0 "指揮車用無線機"
- tank_radio_3_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
- additional_machine_guns:0 "固定式機関銃"
- additional_machine_guns_desc:0 "戦車砲塔、もしくは車体前面に通常の歩兵部隊が使用する機関銃を搭載する事により、周囲への掃射や簡易的な対歩兵戦闘への力を得る事が出来る。"
+ additional_frontal_armor:0 "前面追加装甲"
+ additional_frontal_armor_desc:0 "最も被弾するリスクにさらされる戦車車体の前面に対し、更なる装甲厚を確保することでより効果の高い耐弾性を得る事が出来るが、代償として重量増による若干の移動性能の低下を招く。"
+ spare_tracks:0 "予備の履帯"
+ spare_tracks_desc:0 "被弾した際に交換できる予備の履帯を車体の周囲に取り付ける事により、緊急時のスペアパーツになるだけでなく簡易的な増加装甲としても機能する。"
+
+ #tank_radio_1:0 "戦車搭載用無線機"
+ #tank_radio_1_desc:0 "戦車に搭載可能に改良されたこの無線機は、味方部隊との連絡や相互位置把握、そして司令部との迅速な通信を可能とし機動的な戦闘を行う事ができる。"
+ #tank_radio_3:0 "指揮車用無線機"
+ #tank_radio_3_desc:0 "戦車中隊、あるいは大隊の指揮官が搭乗する戦車車両向けにより強力な電波を発信し、安定した通信が可能な無線機は戦闘中の自軍部隊をより効率的に統括することができるだろう。"
+
+ IB_tank_coaxial_machine_gun:0 "同軸機関銃"
+ IB_tank_coaxial_machine_gun_desc:0 "砲塔に固定式の機関銃を搭載する事により、指向した方向に対し限定的ではあるが制圧力を発揮する。"
+ additional_machine_guns:0 "車体用機関銃"
+ additional_machine_guns_desc:0 "車体前面に通常の歩兵部隊が使用する機関銃を搭載する事により、周囲への掃射や簡易的な対歩兵戦闘への力を得る事が出来る。"
+
  EQ_MOD_CAT_tank_small_main_armament_TITLE:0 "小型砲"
  EQ_MOD_CAT_tank_medium_main_armament_TITLE:0 "中型砲"
  EQ_MOD_CAT_tank_heavy_main_armament_TITLE:0 "大型砲"
