エラー削減、使わない国家タグ削除、死守と強攻の効果を切り替え式から30日間持続式に変更

--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  AIRWING_MISSION_TYPE_AIR_SUPERIORITY:0 "制空任務"
  STAT_AIR_SUPERIORITY:0 "制空値: "
  MODIFIER_AIR_SUPERIORITY_EFFICIENCY:0 "制空作戦効率"
