--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -208,14 +208,20 @@
  land_doctrine_research_bonus1_desc:0 "技術進歩の結果誕生した戦車と航空機の複合運用は従来の戦争に革命をもたらすだろう"
  land_doctrine_research_bonus2:0 "更なる陸軍戦略の発展"
  land_doctrine_research_bonus2_desc:0 "戦争遂行の為には、これまでの概念に囚われない斬新な視点から物事を観察する必要がある。"
- armor_research_bonus:0 "自動車技術の向上"
- armor_research_bonus_desc:0 "軍用自動車の発展は輸送力や機動力の向上に繋がる"
- motorized_equipment_research_bonus:0 "装甲技術の向上"
- motorized_equipment_research_bonus_desc:0 "自動車化の波は歩兵まで到達した。 機関銃の掃射に耐えられる装甲を持ち、戦車に随伴可能な車両の開発に注力するべきだ"
  tank_research_bonus:0 "戦車技術の向上"
  tank_research_bonus_desc:0 "進化した戦車は塹壕突破のみならず、敵防御陣地へ錐のように突撃する陸軍の新たなる矛となる。"
+ tank_module_research_bonus:0 "戦車兵装技術の向上"
+ tank_module_research_bonus_desc:0 "戦車の兵装はその作戦や役割ごとに精鋭化していく必要がある"
+ motorized_equipment_research_bonus:0 "装甲技術の向上"
+ motorized_equipment_research_bonus_desc:0 "自動車化の波は歩兵まで到達した。 機関銃の掃射に耐えられる装甲を持ち、戦車に随伴可能な車両の開発に注力するべきだ"
+tank_module_effort:0 "戦車兵装への注力"
+tank_module_effort_desc:0 "戦車兵装への注力"
+amphibious_tank_effort:0 "上陸への注力"
+amphibious_tank_effort_desc:0 "上陸戦への注力"
  landing_ship_research_bonus:0 "上陸部隊の設立"
  landing_ship_research_bonus_desc:0 "発展した上陸部隊はもはや島嶼部のみでの作戦に留まらず、水陸両用機甲戦力を保持した部隊による敵領土への直接上陸を可能とする。"
+ special_forces_research_bonus:0 "特殊部隊の設立"
+ special_forces_research_bonus_desc:0 "発展した特殊部隊は予想外の進撃を厳しい地形で可能にするだろう。"
 
  ###陸軍研究速度バフ###
  cat_anti_tank_research:0 "対戦車砲研究速度"
@@ -224,8 +230,8 @@
  cat_medium_armor_research:0 "中車体研究速度"
  cat_heavy_armor_research:0 "重車体研究速度"
  tp_tech_research:0 "上陸用装備研究速度"
+ special_forces_tech_bonus:0 "特殊部隊研究速度"
  cat_tank_module_research:0 "戦車モジュール研究速度"
- cat_tank_engine_and_armored_research:0 "戦車エンジン・装甲研究速度"
 
  ###空軍NFツリー###
  air_doctrine_research_bonus1:0 "空軍戦略の発展"
