--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -94,6 +94,27 @@
  IB_ADD_SLOT_TITLE:0 "主砲・砲塔"
  IB_ADD_SLOT_TITLE_DESCRYPTION:0 "このスロットに§O戦車§!の§C基礎スペック§!を決定する§H主砲§!と§H砲塔§!を配置します"
 
+ IB_three_man_turret_tt:0 "戦車モジュール解禁：§O3人用砲塔§!"
+ IB_fixed_ss_turret_tt:0 "戦車モジュール解禁：§C各種固定砲塔§!"
+
+ delay_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n勝利できないときも、待ち伏せと時間稼は攻撃側の進行を遅らせるために有効だ。"
+ mobile_infantry_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n一般的な歩兵は機甲部隊と行動をともにするにはあまりにも行軍が遅い。現代の戦場の展開速度についていくためには、自動車化もしくは機械化された歩兵が必要だ。\n\n"
+ armored_spearhead_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n戦車の持つ潜在能力を最大限引き出すためには、戦車を歩兵の支援に縛り付けてはいけない。むしろ、戦車を中核とする、攻撃の先陣を切ることができる独立した快速部隊を編制すべきだ。\n\n"
+
+ dispersed_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n支援部隊を分散させることでより広大な戦線に火力を行き渡らせ、結果として師団の防衛能力を高める。\n\n"
+ intergrated_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n支援部隊と実戦部隊を統合することで、師団の攻撃を強力にする。\n\n"
+ tactical_control_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n前線における諸兵科連合に慣れ親しんだ士官達は、今や全兵科の作戦を直接に統制することができる。"
+ advanced_firebases_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n前進する軍を最大限補助するために、要塞化された陣地内において砲兵の位置を前線に肉薄させる。"
+
+ grand_battle_plan_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n交戦を開始する前に広範囲にわたる計画と準備をすることは成功の鍵である。\n\n"
+ assault_concentration_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n攻勢開始の瞬間に最大の兵力を注力できることを確実にするため、攻勢の前にそれを率いる要素は慎重に前線へと準備、配置される。"
+ armored_operations_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n戦車や装甲車は作戦内で直接支援要請したり、歩兵を戦場まで運ぶのにとても便利な兵器である。"
+
+ operational_concentration_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\nあらゆる軍事行動においては局所的に敵を圧倒することがカギとなる。戦線のどの地点においても圧倒的優位を得られない場合、全戦線を強化するのではなく、他の部分を弱体化させてでも兵を一点に集中させる必要があるだろう。"
+ large_front_offensive_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n指揮、あるいは脅迫により、前線の複数箇所で人海戦術攻勢をしかけることで、敵が火力を一箇所に集中させることを困難にする。"
+ breakthrough_priority_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n作戦密度を増幅させ、前線のあらゆる要求を突破の二の次にして戦力を集中させる。局所的敗北は決定的な打撃を打てるのであれば些細なものである。"
+ guerilla_warfare_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n敵進我退　敵駐我撹　敵疲我打　敵退我追\n敵が進出したら退却せよ。敵が停止したら撹乱せよ。敵が疲弊したら攻撃せよ。敵が退却したら追撃せよ。"
+
  #IB_additional_cost_factor
  IB_tank_cost_modifier_tt:0 "全種類の戦車改造コスト：§G-50%§!"
  mechanized_equipment_design_cost_factor:0 "機械化装備改造コスト"
@@ -214,10 +235,10 @@
  tank_module_research_bonus_desc:0 "戦車の兵装はその作戦や役割ごとに精鋭化していく必要がある"
  motorized_equipment_research_bonus:0 "装甲技術の向上"
  motorized_equipment_research_bonus_desc:0 "自動車化の波は歩兵まで到達した。 機関銃の掃射に耐えられる装甲を持ち、戦車に随伴可能な車両の開発に注力するべきだ"
-tank_module_effort:0 "戦車兵装への注力"
-tank_module_effort_desc:0 "戦車兵装への注力"
-amphibious_tank_effort:0 "上陸への注力"
-amphibious_tank_effort_desc:0 "上陸戦への注力"
+ tank_module_effort:0 "戦車兵装への注力"
+ tank_module_effort_desc:0 "戦間期の様々な机上の空論は度重なる戦闘経験を経て、より実戦的な形で我々の戦車に影響を与えようとしている。革新的な装甲形式や主砲の新機構など、いささか前衛的に思える物でも試してみる価値はあるだろう。"
+ amphibious_tank_effort:0 "上陸への注力"
+ amphibious_tank_effort_desc:0 "専門的な訓練を施された海兵隊と新技術の応用により編み出された両用機械化戦力、そして海軍との綿密な計画は有機的な連携を成功させ、大規模上陸作戦の成功の鍵になる。"
  landing_ship_research_bonus:0 "上陸部隊の設立"
  landing_ship_research_bonus_desc:0 "発展した上陸部隊はもはや島嶼部のみでの作戦に留まらず、水陸両用機甲戦力を保持した部隊による敵領土への直接上陸を可能とする。"
  special_forces_research_bonus:0 "特殊部隊の設立"
