--- a/localisation/replace/innova_l_english.yml
+++ b/localisation/replace/innova_l_english.yml
@@ -88,6 +88,8 @@
  EQ_MOD_CAT_tank_coaxial_module_TITLE:0 "砲塔固定銃砲"
  EQ_MOD_CAT_tank_commander_module_TITLE:0 "砲塔上部銃砲"
 
+ EQ_MOD_CAT_tank_sloped_armor_type_TITLE:0 "戦車装甲角度"
+ EQ_MOD_SLOT_sloped_armor_type_slot_TITLE:0 "装甲傾斜角度"
  EQ_MOD_SLOT_special_type_slot_5_TITLE:0 "特殊機能"
  EQ_MOD_SLOT_special_type_slot_6_TITLE:0 "特殊機能"
 
