--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -255,23 +255,26 @@
  cat_tank_module_research:0 "戦車モジュール研究速度"
 
  ###空軍NFツリー###
+ aviation_effort_3:0 "空軍への注力Ⅲ"
  air_doctrine_research_bonus1:0 "空軍戦略の発展"
  air_doctrine_research_bonus1_desc:0 "次の戦争の主な舞台は空へと移る。我々は脚本を書き直さねばならない。"
  air_doctrine_research_bonus2:0 "更なる空軍戦略の発展"
  air_doctrine_research_bonus2_desc:0 "我が軍の空軍将帥たちはより進歩的な航空機運用を提示している"
- CAS_research_bonus:0 "近接航空支援機の技術向上"
- CAS_research_bonus_desc:0 "戦闘機が主役であるとするなら、近接航空支援機はもう一人の主役となるべきだ。"
- NAV_effort:0 "海軍航空隊への注力"
- NAV_effort_desc:0 "新しい海の戦いは水上はもちろん、 空中にも水面下にもその場を広げていくだろう。 "
- NAV_research_bonus:0 "艦上航空機の技術向上"
- NAV_research_bonus_desc:0 "一部の技術士官らは、魚雷を搭載した飛行機の蜂の一刺しで戦艦をも葬る事が出来ると提唱している。"
- fighter_focus:0 "軽戦闘機重視"
+ AC_eng_effort:0 "航空機エンジンへの注力"
+ AC_eng_effort_desc:0 "航空機エンジンの技術向上"
+ aircraft_engine_research_bonus:0 "航空機エンジンの技術向上"
+ aircraft_engine_research_bonus_desc:0 "戦闘機が主役であるとするなら、エンジンはその心臓である。"
+ AC_gun_effort:0 "航空武装への注力"
+ AC_gun_effort_desc:0 "航空武装の技術向上"
+ aircraft_gun_research_bonus:0 "航空武装の技術向上"
+ aircraft_gun_research_bonus_desc:0 "戦闘機が主役であるとするなら、武装はその牙である。 "
+ fighter_focus:0 "軽航空機重視"
  fighter_focus_desc:0 "世界大戦以来、我々は空中戦を目にしていない。 戦闘機の開発を先行し続けることは将来、我々を優位に立たせるだろう。 "
- fighter_research_bonus:0 "軽戦闘機の技術向上"
+ fighter_research_bonus:0 "軽航空機の技術向上"
  fighter_research_bonus_desc:0 "制空任務が可能な航空機は空の防人となる。"
- bomber_focus:0 "重戦闘機重視"
+ bomber_focus:0 "重航空機重視"
  bomber_focus_desc:0 "充分な重火器を搭載し、敵地後方を奇襲可能な重航空機こそが必要だ。"
- heavy_fighter_research_bonus:0 "重戦闘機の技術向上"
+ heavy_fighter_research_bonus:0 "重航空機の技術向上"
  heavy_fighter_research_bonus_desc:0 "もし爆撃目標が海のはるか向こうに存在したら? もし敵地後方を襲撃する必要に迫られたら? 長大な航続距離を持つ大型戦闘機の登場は空軍を万能へと導くだろう。"
  rocketry_research_bonus:0 "ロケット技術の向上"
  rocketry_research_bonus_desc:0 "もっと高く、もっと早く、もっと遠くへ、我々は進み続ける。 新時代のエンジンと共に。"
@@ -281,35 +284,43 @@
  jet_research_bonus_desc:0 "軍事技術の粋を集めた特殊なエンジンの開発は、航空機を新たなるステップへと導いた"
 
  ###空軍研究速度バフ###
- cas_bomber_research:0 "近接航空支援機研究速度"
- tactical_bomber_research:0 "戦術爆撃機研究速度"
- light_fighter_research:0 "軽戦闘機研究速度"
- cat_heavy_fighter_research:0 "重戦闘機研究速度"
+ light_air_research:0 "軽航空機研究速度"
+ medium_air_research:0 "重航空機研究速度"
+ cat_air_engine_research:0 "航空機エンジン研究速度"
+ cat_air_guns_research:0 "航空機武装研究速度"
 
  ###海軍NFツリー###
- naval_effort:0 "艤装への注力"
- ship_module_idea:0 "海軍艤装の技術向上"
- ship_module_idea_desc:0 "旧時代を凌ぐ大口径の主砲と魚雷は敵海軍を粉砕するだろう。"
+ naval_effort:0 "海軍への注力"
+ naval_effort_2:0 "海軍への注力Ⅱ"
  naval_doctrine_research_bonus_S:0 "柔軟的な海軍戦略"
  naval_doctrine_research_bonus_S_desc:0 "我々の海軍戦略の変化は、大型艦が海上の全てを支配する時代はとうに終わっていると敵に思い知らせるだろう。"
  naval_doctrine_research_bonus_L:0 "大規模な海軍戦略"
  naval_doctrine_research_bonus_L_desc:0 "従来の我々の海軍戦略は圧倒的な海上戦力を持つ保持する事である。 これは戦わずとも戦争に勝利可能な事を意味する"
  SS_research_bonus:0 "潜水艦技術の向上"
  SS_research_bonus_desc:0 "先の大戦で生まれて以来、潜水艦は進化し続けている分野の一つである。 この兵科の発展は次の戦争に役立つだろう。"
- DD_research_bonus:0 "駆逐艦技術の向上"
- DD_research_bonus_desc:0 "駆逐艦は忠実な番犬が如く海上を走り、対潜掃討や艦隊護衛に従事する重要な存在である。 この分野の発展を放置する事はできない。"
- Cruiser_research_bonus:0 "巡洋艦技術の向上"
- Cruiser_research_bonus_desc:0 "あらゆる海軍任務で万能を発揮する巡洋艦の発展は海軍力の底上げを意味する。"
- Capital_ships_research_bonus:0 "主力艦技術の向上"
- Capital_ships_research_bonus_desc:0 "海軍軍縮の時代は終わりを迎えた! より大型の超弩級戦艦と飛行甲板を搭載した航空母艦の誕生は建艦競争を再開させた。 もはや新大艦主義時代の到来を避けることはできないのだ…。"
+ screen_ship_effort:0 "直衛艦技術の向上"
+ screen_ship_effort_desc:0 "直衛艦技術の向上"
+ screen_ship_research_bonus:0 "直衛艦技術の向上"
+ screen_ship_research_bonus_desc:0 "直衛艦は忠実な番犬が如く海上を走り、対潜掃討や艦隊護衛に従事する重要な存在である。 この分野の発展を放置する事はできない。"
+ carrier_effort:0 "航空母艦への注力"
+ carrier_effort_desc:0 "航空母艦への注力"
+ carrier_research_bonus:0 "航空母艦への注力"
+ carrier_research_bonus_desc:0 "戦艦は過ぎ去った過去の遺物である。海軍の未来は航空戦力の保有にあるのだ。"
+ battleship_effort:0 "戦艦への注力"
+ battleship_effort_desc:0 "戦艦への注力"
+ battleships_research_bonus:0 "戦艦への注力"
+ battleships_research_bonus_desc:0 "海軍軍縮の時代は終わりを迎えた! より大型の超弩級戦艦の誕生は建艦競争を再開させた。 もはや新大艦主義時代の到来を避けることはできないのだ…。"
 
  ###海軍研究速度バフ###
- ship_module_research:0 "海軍艤装研究速度"
  ss_tech_research:0 "潜水艦研究速度"
  dd_tech_research:0 "駆逐艦研究速度"
  cl_tech_research:0 "巡洋艦研究速度"
  cv_tech_research:0 "航空母艦研究速度"
  bb_tech_research:0 "戦艦研究速度"
+ cat_ship_light_battery_research:0 "小型砲研究速度"
+ cat_ship_medium_battery_research:0 "中型砲研究速度"
+ cat_ship_heavy_battery_research:0 "大型砲研究速度" 
+ cat_torpedoes_research:0 "魚雷研究速度"
 
  ###工業NFツリー###
  industry_research_bonus:0 "工業技術の向上"
