--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -131,10 +131,22 @@
  spare_tracks:0 "予備の履帯"
  spare_tracks_desc:0 "被弾した際に交換できる予備の履帯を車体の周囲に取り付ける事により、緊急時のスペアパーツになるだけでなく簡易的な増加装甲としても機能する。"
 
- vertical_armor:0 "垂直装甲"
- vertical_armor_desc:0 "説明文募集"
- half_sloped_armor:0 "半傾斜装甲"
- half_sloped_armor_desc:0 "説明文募集"
+ tank_riveted_vertical_armor:0 "リベット垂直装甲"
+ tank_riveted_vertical_armor_desc:0 "リベット垂直装甲"
+ tank_riveted_half_sloped_armor:0 "リベット半傾斜装甲"
+ tank_riveted_half_sloped_armor_desc:0 "リベット半傾斜装甲"
+ tank_cast_vertical_armor:0 "鋳造垂直装甲"
+ tank_cast_vertical_armor_desc:0 "鋳造垂直装甲"
+ tank_cast_half_sloped_armor:0 "鋳造半傾斜装甲"
+ tank_cast_half_sloped_armor_desc:0 "鋳造半傾斜装甲"
+ tank_cast_sloped_armor:0 "鋳造傾斜装甲"
+ tank_cast_sloped_armor_desc:0 "鋳造傾斜装甲"
+ tank_welded_vertical_armor:0 "溶接垂直装甲"
+ tank_welded_vertical_armor_desc:0 "溶接傾斜装甲"
+ tank_welded_half_sloped_armor:0 "溶接半傾斜装甲"
+ tank_welded_half_sloped_armor_desc:0 "溶接半傾斜装甲"
+ tank_welded_sloped_armor:0 "溶接傾斜装甲"
+ tank_welded_sloped_armor_desc:0 "溶接傾斜装甲"
 
  IB_tank_coaxial_machine_gun:0 "同軸機関銃"
  IB_tank_coaxial_machine_gun_desc:0 "砲塔に固定式の機関銃を搭載する事により、指向した方向に対し限定的ではあるが制圧力を発揮する。"
