--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -424,31 +424,31 @@
  Eastern Japan:0 "日本東部"
  North Japan:0 "日本北部"
  
-  STRATEGICREGION_1:0 "イングランド南部"
+ STRATEGICREGION_1:0 "イングランド南部"
  STRATEGICREGION_2:0 "イングランド北部"
  STRATEGICREGION_3:1 "スコットランド"
  STRATEGICREGION_4:0 "アイルランド"
  STRATEGICREGION_5:0 "ベネルクス地方"
  STRATEGICREGION_6:0 "ドイツ北西部"
  STRATEGICREGION_7:0 "ドイツ西部"
- STRATEGICREGION_8:0 "ドイツ東部"
+ STRATEGICREGION_8:0 "ベルリン"
  STRATEGICREGION_9:1 "上バルト海"
  STRATEGICREGION_10:0 "スウェーデン南部"
  STRATEGICREGION_11:0 "ノルウェー南部"
  STRATEGICREGION_12:0 "スカンディナヴィア北部"
  STRATEGICREGION_13:0 "フィンランド"
- STRATEGICREGION_14:0 "トランスウラル"
+ STRATEGICREGION_14:0 "カレリア"
  STRATEGICREGION_16:0 "北海"
  STRATEGICREGION_17:1 "エチオピア高原"
  STRATEGICREGION_18:0 "イギリス海峡"
  STRATEGICREGION_19:0 "フランス北部"
  STRATEGICREGION_20:0 "フランス南部"
  STRATEGICREGION_21:0 "アルプス地方"
- STRATEGICREGION_22:0 "チェコスロヴァキア"
+ STRATEGICREGION_22:0 "チェコ"
  STRATEGICREGION_23:0 "イタリア"
  STRATEGICREGION_24:0 "バルカン西部"
  STRATEGICREGION_25:0 "ギリシャ"
- STRATEGICREGION_26:0 "バルカン東部"
+ STRATEGICREGION_26:0 "ブカレスト"
  STRATEGICREGION_27:0 "バルカン北部"
  STRATEGICREGION_28:0 "中東"
  STRATEGICREGION_29:0 "地中海中央部"
@@ -461,7 +461,7 @@
  STRATEGICREGION_36:0 "グリーンランド"
  STRATEGICREGION_37:0 "バルト諸国"
  STRATEGICREGION_38:0 "ポーランド西部"
- STRATEGICREGION_39:0 "ポーランド東部"
+ STRATEGICREGION_39:0 "西ウクライナ"
  STRATEGICREGION_40:1 "トランスヴォルガ"
  STRATEGICREGION_41:2 "イベリア北東部"
  STRATEGICREGION_42:0 "ビスケー湾"
@@ -554,8 +554,8 @@
  STRATEGICREGION_129:0 "小アジア"
  STRATEGICREGION_130:0 "ウクライナ"
  STRATEGICREGION_131:0 "ベラルーシ"
- STRATEGICREGION_132:1 "ノヴゴロド"
- STRATEGICREGION_133:0 "中央ロシア"
+ STRATEGICREGION_132:1 "北方戦線"
+ STRATEGICREGION_133:0 "モスクワ"
  STRATEGICREGION_134:0 "コーカサス地方"
  STRATEGICREGION_135:0 "クバン地方"
  STRATEGICREGION_136:1 "アラシュ"
@@ -643,13 +643,13 @@
  STRATEGICREGION_218:0 "カリフォルニア"
  STRATEGICREGION_219:1 "ロッキー山脈南部"
  STRATEGICREGION_220:0 "ラブラドールおよびニューファンドランド"
- STRATEGICREGION_221:0 "サスカチュワン"
- STRATEGICREGION_222:0 "カナダ北部"
+ STRATEGICREGION_221:0 "シュレジエン"
+ STRATEGICREGION_222:0 "スロバキア"
  STRATEGICREGION_223:2 "ザンベジ"
  STRATEGICREGION_224:2 "アンゴラ"
- STRATEGICREGION_225:2 "トリポリ"
- STRATEGICREGION_226:0 "西アフリカ"
- STRATEGICREGION_227:1 "北東コンゴ"
+ STRATEGICREGION_225:2 "トランシルバニア"
+ STRATEGICREGION_226:0 "ブルガリア"
+ STRATEGICREGION_227:1 "ベッサラビア"
  STRATEGICREGION_228:1 "南インドシナ"
  STRATEGICREGION_229:0 "シャム"
  STRATEGICREGION_230:0 "コモリン岬"
@@ -665,8 +665,8 @@
  STRATEGICREGION_240:0 "ザグロス"
  STRATEGICREGION_241:0 "カヴィール砂漠"
  STRATEGICREGION_242:0 "満洲北部"
- STRATEGICREGION_243:0 "満洲東部"
- STRATEGICREGION_244:0 "チャハル"
+ STRATEGICREGION_243:0 "バイエルン"
+ STRATEGICREGION_244:0 "プロイセン"
  STRATEGICREGION_245:0 "山西地域"
  STRATEGICREGION_246:0 "華中"
  STRATEGICREGION_247:0 "揚子江地域"
@@ -684,7 +684,7 @@
  STRATEGICREGION_259:1 "サハ東部"
  STRATEGICREGION_260:0 "サハ西部"
  STRATEGICREGION_261:0 "アルタイ"
- STRATEGICREGION_262:0 "中央シベリア"
+ STRATEGICREGION_262:0 "クルスク"
  STRATEGICREGION_263:1 "ウラル以東ネネツ"
  STRATEGICREGION_264:0 "コミ＝ネネツ"
  STRATEGICREGION_265:0 "東カレリア"
@@ -694,12 +694,13 @@
  STRATEGICREGION_269:0 "サマルカンド"
  STRATEGICREGION_270:0 "シルダリヤ"
  STRATEGICREGION_NAMIBIA:0 "ナミビア"
- STRATEGICREGION_271:1 "南東コンゴ"
+ STRATEGICREGION_271:1 "スターリングラード"
  STRATEGICREGION_272:0 "西コンゴ"
  STRATEGICREGION_273:0 "ダナキル"
  STRATEGICREGION_274:2 "オガデン"
  STRATEGICREGION_275:0 "ドンバス地方"
  STRATEGICREGION_276:0 "プスコフ"
  STRATEGICREGION_277:0 "クエゼリン環礁"
-
- 
+ STRATEGICREGION_278:0 "ゴーリキー"
+ STRATEGICREGION_280:0"ロストフ"
+ STRATEGICREGION_340:0"ブレスト"
