--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -179,6 +179,8 @@
 
  #air_modules_replace
  EQ_MOD_CAT_anti_tank_weapon_TITLE:0"対戦車砲"
+ EQ_MOD_CAT_fighter_weapon_TITLE:0"機関銃"
+ EQ_MOD_CAT_machine_gun_TITLE:0"機関砲"
  torpedo_mounting_2:0 "航空魚雷2型"
  torpedo_mounting_2_desc:0 "航空業雷2型"
 
