--- a/localisation/japanese/strategic_region_names_l_japanese.yml
+++ b/localisation/japanese/strategic_region_names_l_japanese.yml
@@ -80,7 +80,7 @@
  STRATEGICREGION_79: "日本海"
  STRATEGICREGION_80: "セレベス海"
  STRATEGICREGION_81: "珊瑚海"
- STRATEGICREGION_82: "カーペンタリア湾"
+ STRATEGICREGION_82: "アラフラ海"
  STRATEGICREGION_83: "ソロモン諸島"
  STRATEGICREGION_84: "カロリン海盆"
  STRATEGICREGION_85: "南西インド洋"
@@ -89,7 +89,7 @@
  STRATEGICREGION_88: "ベーリング海"
  STRATEGICREGION_89: "西海岸"
  STRATEGICREGION_90: "日本沿岸"
- STRATEGICREGION_91: "アラフラ海"
+ STRATEGICREGION_91: "バンダ海"
  STRATEGICREGION_92: "ティモール海"
  STRATEGICREGION_93: "ジャワ海"
  STRATEGICREGION_94: "マリアナ諸島"
