--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -15,6 +15,19 @@
  IB_SCOUT_PLANE_TEXT:0 "艦上偵察機"
  IB_tank_design_bonus:0 "戦車設計局"
 
+ #海軍艤装技術背景
+ 4inGun:0 "4in小型砲"
+ 5inGun:0 "5in小型砲"
+ 5HinGun:0 "5.5in中型砲"
+ 6inGun:0 "6in中型砲"
+ 8inGun:0 "8in中型砲"
+ 14inGun:0 "14in大型砲"
+ 15inGun:0 "15in大型砲"
+ 16inGun:0 "16in大型砲"
+ 18inGun:0 "18in大型砲"
+ Navy_turret:0 "砲塔機構"
+ Navy_ammo:0 "砲弾研究"
+
  AST_cammell_laird:0 "キャメル・レアード"
  AST_john_brown_company:0 "ジョンブラウン・カンパニー"
  ETH_FRA_panhard:0 "パナール" 
