--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -191,11 +191,73 @@
  tank_heavy_fixed_superstructure_turret_1_desc:0 "超大型砲用固定砲塔"
 
  #air_modules_replace
- EQ_MOD_CAT_anti_tank_weapon_TITLE:0"対戦車砲"
+ EQ_MOD_SLOT_fixed_main_weapon_slot_TITLE:0"設計思想"
+ EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_1_TITLE:0"航空機胴体"
+ EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_2_TITLE:0"航空機胴体"
+ EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_3_TITLE:0"航行装置"
+ EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_4_TITLE:0"航行装置"
+ EQ_MOD_SLOT_engine_type_slot_TITLE:0"機首兵装"
+ EQ_MOD_SLOT_special_type_slot_1_TITLE:0"機首上面兵装"
+ EQ_MOD_SLOT_special_type_slot_2_TITLE:0"両翼兵装"
+ EQ_MOD_SLOT_special_type_slot_3_TITLE:0"後部兵装"
+ EQ_MOD_SLOT_special_type_slot_4_TITLE:0"下部兵装"
+ EQ_MOD_SLOT_special_type_slot_5_TITLE:0"下部兵装"
+ EQ_MOD_SLOT_special_type_slot_6_TITLE:0"下部兵装"
+
+ EQ_MOD_CAT_light_plane_concept_TITLE:0"軽航空機設計思想"
+ EQ_MOD_CAT_medium_plane_concept_TITLE:0"中航空機設計思想"
+ EQ_MOD_CAT_large_plane_concept_TITLE:0"重航空機設計思想"
+ EQ_MOD_CAT_plane_module_wing_TITLE:0"翼下兵装モジュール"
+ EQ_MOD_CAT_plane_module_Lower_small_TITLE:0"下部兵装モジュール(小)"
+ EQ_MOD_CAT_plane_module_Lower_medium_TITLE:0"下部兵装モジュール(中)"
+ EQ_MOD_CAT_plane_module_Lower_large_TITLE:0"下部兵装モジュール(大)"
+ EQ_MOD_CAT_plane_engine_type_TITLE:0"単発エンジン"
+ EQ_MOD_CAT_plane_rocket_engine_type_TITLE:0"ロケットエンジン"
+ EQ_MOD_CAT_twin_plane_engine_type_TITLE:0"双発エンジン"
+ EQ_MOD_CAT_medium_plane_engine_type_TITLE:0"三発エンジン"
+ EQ_MOD_CAT_quad_large_plane_engine_type_TITLE:0"四発エンジン"
+ EQ_MOD_CAT_large_plane_engine_type_TITLE:0"六発エンジン"
  EQ_MOD_CAT_fighter_weapon_TITLE:0"機関銃"
  EQ_MOD_CAT_machine_gun_TITLE:0"機関砲"
+ EQ_MOD_CAT_anti_tank_weapon_TITLE:0"対戦車砲"
+ EQ_MOD_CAT_cas_weapon_TITLE:0"小型爆弾"
+ EQ_MOD_CAT_tac_weapon_TITLE:0"中型爆弾"
+ EQ_MOD_CAT_strat_weapon_TITLE:0"大型爆弾"
+ EQ_MOD_CAT_nav_bomber_weapon_TITLE:0"対艦兵装"
+
+ concept_fighter:0"戦闘機"
+ concept_fighter_desc:0"この航空機機体は 戦闘機 として設計開発される"
+ concept_cas:0"近接航空支援機"
+ concept_cas_desc:0"この航空機機体は 近接航空支援機 として設計開発される"
+ concept_naval_bomber:0"対艦攻撃機"
+ concept_naval_bomber_desc:0"この航空機機体は 対艦攻撃機 として設計開発される"
+ concept_heavy_fighter:0"重戦闘機"
+ concept_heavy_fighter_desc:0"この航空機機体は 重戦闘機 として設計開発される"
+ concept_tactical_bomber:0"戦術爆撃機"
+ concept_tactical_bomber_desc:0"この航空機機体は 戦術爆撃機 として設計開発される"
+ concept_scout_plane:0"偵察機"
+ concept_scout_plane_desc:0"この航空機機体は 偵察機 として設計開発される"
+ concept_strategic_bomber:0"戦略爆撃機"
+ concept_strategic_bomber_desc:0"この航空機機体は 戦略爆撃機 として設計開発される"
+ concept_maritime_patrol_plane:0"海上哨戒機"
+ concept_maritime_patrol_plane_desc:0"この航空機機体は 海上哨戒機 として設計開発される"
+ radio_navigation_0:0"初期航行装置"
+ radio_navigation_0_desc:0"戦間期に制作された多くの航空機に搭載された基本的な航行装置。"
+ aircraft_cannon_1_1x:0"機関砲 I ×1"
+ aircraft_cannon_1_2x:0"機関砲 I ×2"
+ aircraft_cannon_2_1x:0"機関砲 II ×1"
+ aircraft_cannon_2_2x:0"機関砲 II ×2"
+ fuel_tanks_small:0"追加燃料タンク"
+ fuel_tanks_medium:0"追加燃料タンク"
+ fuel_tanks_large:0"追加燃料タンク"
+ self_sealing_fuel_tanks_small:0"自働防漏タンク"
+ self_sealing_fuel_tanks_medium:0"自働防漏タンク"
+ self_sealing_fuel_tanks_large:0"自働防漏タンク"
+ dive_brakes_small:0"ダイブブレーキ"
+ torpedo_mounting:0"航空魚雷1型"
+ torpedo_mounting_desc:0"航空機に搭載出来るように製作された魚雷。"
  torpedo_mounting_2:0 "航空魚雷2型"
- torpedo_mounting_2_desc:0 "航空業雷2型"
+ torpedo_mounting_2_desc:0"威力、信頼性が向上した航空機に搭載可能な魚雷。"
 
  #air_doctrin
  TITLE_COORDINATED_SUPPORT:0"地上支援"
