--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -199,7 +199,7 @@
  EQ_MOD_SLOT_engine_type_slot_TITLE:0"機首兵装"
  EQ_MOD_SLOT_special_type_slot_1_TITLE:0"機首上面兵装"
  EQ_MOD_SLOT_special_type_slot_2_TITLE:0"両翼兵装"
- EQ_MOD_SLOT_special_type_slot_3_TITLE:0"後部兵装"
+ EQ_MOD_SLOT_special_type_slot_3_TITLE:0"胴体兵装"
  EQ_MOD_SLOT_special_type_slot_4_TITLE:0"下部兵装"
  EQ_MOD_SLOT_special_type_slot_5_TITLE:0"下部兵装"
  EQ_MOD_SLOT_special_type_slot_6_TITLE:0"下部兵装"
