--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -204,19 +204,20 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_3_TITLE:0"航空機胴体と航行装置"
  EQ_MOD_SLOT_fixed_auxiliary_weapon_slot_4_TITLE:0"航空機胴体と航行装置"
  EQ_MOD_SLOT_engine_type_slot_TITLE:0"機首兵装"
- EQ_MOD_SLOT_special_type_slot_1_TITLE:0"機首上面兵装"
+ EQ_MOD_SLOT_special_type_slot_1_TITLE:0"機首兵装"
  EQ_MOD_SLOT_special_type_slot_2_TITLE:0"両翼兵装"
  EQ_MOD_SLOT_special_type_slot_3_TITLE:0"胴体兵装"
- EQ_MOD_SLOT_special_type_slot_4_TITLE:0"下部兵装"
- EQ_MOD_SLOT_special_type_slot_5_TITLE:0"下部兵装"
- EQ_MOD_SLOT_special_type_slot_6_TITLE:0"下部兵装"
+ EQ_MOD_SLOT_special_type_slot_4_TITLE:0"搭載兵装"
+ EQ_MOD_SLOT_special_type_slot_5_TITLE:0"搭載兵装"
+ EQ_MOD_SLOT_special_type_slot_6_TITLE:0"搭載兵装"
 
  EQ_MOD_CAT_light_plane_concept_TITLE:0"軽航空機設計思想"
  EQ_MOD_CAT_medium_plane_concept_TITLE:0"中航空機設計思想"
  EQ_MOD_CAT_large_plane_concept_TITLE:0"重航空機設計思想"
- EQ_MOD_CAT_plane_module_Lower_small_TITLE:0"下部兵装モジュール(小)"
- EQ_MOD_CAT_plane_module_Lower_medium_TITLE:0"下部兵装モジュール(中)"
- EQ_MOD_CAT_plane_module_Lower_large_TITLE:0"下部兵装モジュール(大)"
+ EQ_MOD_CAT_plane_module_drop_tanks_TITLE:0"落下増槽"
+ EQ_MOD_CAT_plane_module_Lower_small_TITLE:0"下部モジュール(小)"
+ EQ_MOD_CAT_plane_module_Lower_medium_TITLE:0"下部モジュール(中)"
+ EQ_MOD_CAT_plane_module_Lower_large_TITLE:0"下部モジュール(大)"
  EQ_MOD_CAT_plane_engine_type_TITLE:0"単発エンジン"
  EQ_MOD_CAT_plane_rocket_engine_type_TITLE:0"ロケットエンジン"
  EQ_MOD_CAT_twin_plane_engine_type_TITLE:0"双発エンジン"
@@ -226,7 +227,8 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  EQ_MOD_CAT_fighter_weapon_TITLE:0"機関銃"
  EQ_MOD_CAT_machine_gun_TITLE:0"機関砲"
  EQ_MOD_CAT_anti_tank_weapon_TITLE:0"対戦車砲"
- EQ_MOD_CAT_bomb_weapon_TITLE:0"爆弾兵装"
+ EQ_MOD_CAT_cas_weapon_TITLE:0"吊り下げ兵装"
+ EQ_MOD_CAT_tac_weapon_TITLE:0"爆弾槽"
  EQ_MOD_CAT_nav_bomber_weapon_TITLE:0"対艦兵装"
 
  concept_fighter:0"戦闘機"
@@ -245,10 +247,22 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  concept_strategic_bomber_desc:0"この航空機機体は 戦略爆撃機 として設計開発される"
  concept_maritime_patrol_plane:0"海上哨戒機"
  concept_maritime_patrol_plane_desc:0"この航空機機体は 海上哨戒機 として設計開発される"
- aircraft_cannon_1_1x:0"機関砲 I ×1"
- aircraft_cannon_1_2x:0"機関砲 I ×2"
- aircraft_cannon_2_1x:0"機関砲 II ×1"
- aircraft_cannon_2_2x:0"機関砲 II ×2"
+ light_mg_2x:0"7.7mm機関銃 ×2"
+ light_mg_4x:0"7.7mm機関銃 ×4"
+ heavy_mg_2x:0"12.7mm重機関銃 ×2"
+ heavy_mg_4x:0"12.7mm重機関銃 ×4"
+ aircraft_cannon_1_1x:0"20mm機関砲 I ×1"
+ aircraft_cannon_1_2x:0"20mm機関砲 I ×2"
+ aircraft_cannon_2_1x:0"20mm機関砲 Ⅱ ×1"
+ aircraft_cannon_2_2x:0"20mm機関砲 Ⅱ ×2"
+ large_aircraft_cannon_1x:0"30mm機関砲 ×1"
+ large_aircraft_cannon_2x:0"30mm機関砲 ×2"
+ bomb_locks:0"200kg 吊り爆弾"
+ armor_piercing_bomb_locks:0"500kg 吊り爆弾"
+ heavy_bomb_locks:0"1000kg 吊り爆弾"
+ small_bomb_bay:0"500kg 爆弾槽"
+ medium_bomb_bay:0"1000kg 爆弾槽"
+ large_bomb_bay:0"2000kg 爆弾槽"
  fuel_tanks_small:0"追加燃料タンク"
  fuel_tanks_medium:0"追加燃料タンク"
  fuel_tanks_large:0"追加燃料タンク"
