--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -227,7 +227,8 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  EQ_MOD_CAT_fighter_weapon_TITLE:0"機関銃"
  EQ_MOD_CAT_machine_gun_TITLE:0"機関砲"
  EQ_MOD_CAT_anti_tank_weapon_TITLE:0"対戦車砲"
- EQ_MOD_CAT_cas_weapon_TITLE:0"吊り下げ兵装"
+ EQ_MOD_CAT_rocket_rails_weapon_TITLE:0"ロケットレール"
+ EQ_MOD_CAT_cas_weapon_TITLE:0"吊り下げ爆弾"
  EQ_MOD_CAT_tac_weapon_TITLE:0"爆弾槽"
  EQ_MOD_CAT_nav_bomber_weapon_TITLE:0"対艦兵装"
 
@@ -263,6 +264,8 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  small_bomb_bay:0"500kg 爆弾槽"
  medium_bomb_bay:0"1000kg 爆弾槽"
  large_bomb_bay:0"2000kg 爆弾槽"
+ tank_buster_1:0"小型対戦車砲"
+ tank_buster_2:0"大型対戦車砲"
  fuel_tanks_small:0"追加燃料タンク"
  fuel_tanks_medium:0"追加燃料タンク"
  fuel_tanks_large:0"追加燃料タンク"
@@ -308,6 +311,16 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  black_sea_naval_manufacturer:0 "内海艦隊の設計社"
  naval_manufacturer:0 "内海艦隊の設計社"
  battlefleet_designer:0 "戦闘艦隊の設計社"
+ generic_task_force_ship_organization:0 "太平洋艦隊の設計社"
+ generic_mio_initial_trait_task_force_ship_builders:0 "太平洋艦隊の設計社"
+ generic_battle_line_ship_organization:0 "戦闘艦隊の設計社"
+ generic_mio_initial_trait_battle_line_ship_builders:0 "戦闘艦隊の設計社"
+ generic_escort_ship_organization:0 "護衛艦隊の設計社"
+ generic_mio_initial_trait_escort_fleet:0 "護衛艦隊の設計社"
+ generic_raider_ship_organization:0 "大西洋艦隊の設計社"
+ generic_mio_initial_trait_raiding_fleet:0 "大西洋艦隊の設計社"
+ generic_black_sea_fleet_organization:0 "内海艦隊の設計社"
+ generic_mio_initial_trait_black_sea_fleet_designer:0 "内海艦隊の設計者"
 
  ###航空機企業###
  CAS_manufacturer:0 "対地攻撃重視の設計社"
