--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -296,12 +296,20 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  artillery5_desc:0 "全高を低くした設計の砲は、敵が標的にするのをより困難にさせる。"
  artillery6:0 "発展型野戦砲改良 II"
  artillery6_desc:0 "全高を低くした設計の砲は、敵が標的にするのをより困難にさせる。"
+ artillery7:0 "現代型野戦砲改良"
+ artillery7_desc:0 "全高を低くした設計の砲は、敵が標的にするのをより困難にさせる。"
  rocket_artillery5:0 "ロケット砲改良 III"
  rocket_artillery5_desc:0 "旋回安定ロケットは軽砲兵隊の射程を上昇させることができる。"
- antiair6:0 "発展型対空砲改善"
+ rocket_artillery6:0 "ロケット砲改良 IV"
+ rocket_artillery6_desc:0 "旋回安定ロケットは軽砲兵隊の射程を上昇させることができる。"
+ antiair6:0 "発展型対空砲改善 I"
  antiair6_desc:0 "最新のレーダー装置と統合された電算機と自動装填装置は、より速い航空機に対抗するため必要となる。"
- antitank6:0 "発展型対戦車砲改善"
+ antiair7:0 "発展型対空砲改善 II"
+ antiair7_desc:0 "最新のレーダー装置と統合された電算機と自動装填装置は、より速い航空機に対抗するため必要となる。"
+ antitank6:0 "発展型対戦車砲改善 I"
  antitank6_desc:0 "低抵抗の風防を弾頭の先端に取り付けることによって、距離が離れても弾速を維持できるようになる。"
+ antitank7:0 "発展型対戦車砲改善  II"
+ antitank7_desc:0 "低抵抗の風防を弾頭の先端に取り付けることによって、距離が離れても弾速を維持できるようになる。"
 
  ###陸軍ドクトリン研究補正###
  doctrine_cat_MW_idea:0 "陸軍ドクトリンの完遂"
