・defines AIR_WING_MAX_STATS_SPEED = 800 > 1000 AIR_WING_BOMB_DAMAGE_FACTOR = 2 > 0.25 ・空軍将校団 集中管理と本土防衛の効果を入れ替え 本土防衛に各天候ペナ軽減を-20% ・空軍モジュール ロケットエンジンの航続低下値を-80%に統一 大型機、中型機の航続低下 設計思想に迎撃機を追加 迎撃機でのみエンジンの艤装にロケットエンジンを搭載可能に ・個人的に気になっているので輸送船ディシジョンのローカライズを追加

--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -233,6 +233,8 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
 
  concept_fighter:0"戦闘機"
  concept_fighter_desc:0"この航空機機体は 戦闘機 として設計開発される"
+ concept_interception:0"迎撃機"
+ concept_interception_desc:0"この航空機機体は 迎撃機 として設計開発される"
  concept_cas:0"近接航空支援機"
  concept_cas_desc:0"この航空機機体は 近接航空支援機 として設計開発される"
  concept_naval_bomber:0"対艦攻撃機"
