--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -510,5 +510,5 @@ concentrated_industry6:0 "集中工業Ⅵ"
 dispersed_industry6:0 "分散工業Ⅵ"
 construction6:0 "建築Ⅵ"
 excavation6:0 "掘削Ⅵ"
-modern_oil_processing2:0 "現代型石油化工Ⅱ"
+modern_oil_processing2:0 "現代型石油加工Ⅱ"
 modern_rubber_processing2:0 "現代型ゴム加工Ⅱ"
